[gd_scene load_steps=2 format=3 uid="uid://dgkfmeu7ph8ey"]

[ext_resource type="Script" uid="uid://bpxcpfxkihflj" path="res://scenes/ui/popups/reasr_popup.gd" id="1_au6sf"]

[node name="ReasrPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 649.0
offset_bottom = 452.0
script = ExtResource("1_au6sf")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "测试内容， 反对自由主义。"
editable = false
wrap_mode = 1

[node name="ButtonBar" type="HBoxContainer" parent="Layout"]
layout_mode = 2
alignment = 1

[node name="TranslateButton" type="Button" parent="Layout/ButtonBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "分割并翻译"

[node name="OkButton" type="Button" parent="Layout/ButtonBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "接受翻译"

[node name="SplitButton" type="Button" parent="Layout/ButtonBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "仅分割"

[node name="CancelButton" type="Button" parent="Layout/ButtonBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "取消"
